@@ -8,6 +8,6 @@ Homepage: http://www.bloonix.de/
 
 Package: bloonix-plugins-sensors
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, bloonix-core, lm-sensors
+Depends: ${shlibs:Depends}, ${misc:Depends}, bloonix-agent, bloonix-core, lm-sensors
 Description: Bloonix Plugins lm-sensors
  bloonix-plugins-sensors provides script to check temperatures.
